--- a/templates/contact.html
+++ b/templates/contact.html
@@ -44,7 +44,7 @@
                                 </svg></div>
                             <div class="px-2">
                                 <h6 class="mb-0">Phone</h6>
-                                <p class="mb-0">+123456789</p>
+                                <p class="mb-0"></p>
                             </div>
                         </div>
                         <div class="d-flex align-items-center p-3">
@@ -53,7 +53,7 @@
                                 </svg></div>
                             <div class="px-2">
                                 <h6 class="mb-0">Email</h6>
-                                <p class="mb-0">info@example.com</p>
+                                <p class="mb-0"></p>
                             </div>
                         </div>
                         <div class="d-flex align-items-center p-3">
@@ -63,7 +63,7 @@
                 </div>
                 <div class="col-md-6 col-lg-5 col-xl-4">
                     <div>
-                        <form class="p-3 p-xl-4" method="post">
+                        <form class="p-3 p-xl-4" data-bss-recipient="e16aaae4fd56118426184cfdf29baa11">
                             <div class="mb-3"><input class="form-control" type="text" id="name-1" name="name" placeholder="Name"></div>
                             <div class="mb-3"><input class="form-control" type="email" id="email-1" name="email" placeholder="Email"></div>
                             <div class="mb-3"><textarea class="form-control" id="message-1" name="message" rows="6" placeholder="Message"></textarea></div>
@@ -75,6 +75,7 @@
         </div>
     </section>
     <script src="static/assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="static/assets/js/smart-forms.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.js"></script>
     <script src="static/assets/js/vanilla-zoom.js"></script>
     <script src="static/assets/js/theme.js"></script>
