updated app and index

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,10 @@
                 </div>
             </div>
             <div class="d-flex justify-content-center">
-                <form class="d-flex" method="POST"><input name='song' class="form-control" style="height: 34px;width: 428px;background: rgba(132,129,129,0.37);color: rgb(221,220,220);border-radius: 14px;"><button class="btn btn-primary" type="submit" style="margin-left: 5px;">Search</button></form>
+                <form class="d-flex" method="POST">
+                    <input name='song' class="form-control" style="height: 34px;width: 428px;background: rgba(132,129,129,0.37);color: rgb(221,220,220);border-radius: 14px;">
+                    <button class="btn btn-primary" type="submit" style="margin-left: 5px;">Search</button>
+                </form>
             </div>
             {% if sname %}
             <h1 style="color: var(--bs-body-bg);text-align: center;margin: 25px;">If your song is:</h1>
