--- a/templates/contact.html
+++ b/templates/contact.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.css">
     <link rel="stylesheet" href="static/assets/css/Navbar-Right-Links-Dark-icons.css">
     <link rel="stylesheet" href="static/assets/css/vanilla-zoom.min.css">
+    <link rel="icon" href="static/assets/img/icon.png">
 </head>
 
 <body>
